# KvaserConverterGUI

./: .gitmodules  CMakeLists.txt  Readme.md
src/: converter.cpp  converter.h  main.cpp
